--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ DB_PORT=5432
 APP_HOST=localhost
 APP_PORT=8080
 
-PRIVATE_KEY_FILEPATH=./../key/key
-PUBLIC_KEY_FILEPATH=./../key/key.pub
+PRIVATE_KEY_FILEPATH=C:\Users\kamila\GOWorkspace\src\simple-api\key\key
+PUBLIC_KEY_FILEPATH=C:\Users\kamila\GOWorkspace\src\simple-api\key\key.pub
